--- a/desafiourbana-ui - Copia/src/app/login/login/login.component.html
+++ b/desafiourbana-ui - Copia/src/app/login/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 400px; margin: auto">
+  <div style="width: 40%; height: 40%; margin-top: 10%; margin-left: 30%; ">
 
   <form autocomplete="off" #f="ngForm">
     <div class="ui-g ui-fluid">
@@ -26,3 +26,6 @@
   </form>
 
 </div>
+
+<!-- </div> -->
+
