--- a/desafiourbana-ui - Copia/src/app/menu/menu.component.css
+++ b/desafiourbana-ui - Copia/src/app/menu/menu.component.css
@@ -1,8 +1,14 @@
+
 .logo{
+
   width: 100px;
-  height: 130px;
-  left: 45px; position: relative;
-  top: 10px;
+  height: 130px; 
+  /* left: 45px; position: relative;
+  top: 10px;*/ 
+  /* width: 40%;
+  height: 13%; */
+  left: 30%; position: relative;
+  top: 2%;
 }
 
 .navbar-item:hover{
@@ -24,12 +30,17 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: 200px;
+  width: 14%;
   margin: 0;
   padding: 0;
 
   background-color:  #b4bbb7 ;
 
   list-style: none;
+}
+
+.link-selecionado {
+  font-weight: bold;
+  background-color: #1CA65B;
 }
 
