--- a/desafiourbana-ui - Copia/src/app/app.component.html
+++ b/desafiourbana-ui - Copia/src/app/app.component.html
@@ -1,4 +1,18 @@
-<router-outlet></router-outlet>
+<div style="height: 100%;">
+
+  <div class="navegacao" *ngIf="exibindoMenu()">
+    <app-menu ></app-menu>
+  </div>
+
+  <div class="conteudo" style="float:right">
+    <app-content></app-content>
+        
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
+
+
 
 <ng2-toasty></ng2-toasty>
 
