--- a/desafiourbana-ui - Copia/src/app/tv/tv.component.html
+++ b/desafiourbana-ui - Copia/src/app/tv/tv.component.html
@@ -33,10 +33,10 @@
             </div>
 
         </div>
-        <div fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
+        <div class="ui-g-12 ui-md-9" fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
             <div fxFlex="10%">
-                <button class="btn-salvar" pButton type="submit" label="Salvar" ></button>
-                <button style="margin-left: 20px;" class="btn-cancelar" routerLink="/tvs" pButton label="Cancelar"></button>
+                <button class="ui-button-success" pButton type="submit" label="Salvar" ></button>
+                <button class="ui-button-secondary" style="margin-left: 20px;" routerLink="/tvs" pButton label="Cancelar"></button>
             </div>
         </div>
     </form>
