--- a/desafiourbana-ui - Copia/src/app/app.component.html
+++ b/desafiourbana-ui - Copia/src/app/app.component.html
@@ -14,7 +14,7 @@
 
 
 
-<ng2-toasty></ng2-toasty>
+<ng2-toasty [position]="'top-center'"></ng2-toasty>
 
 <p-confirmDialog header="Confirmação" icon="fa fa-question-circle" #confirmacao>
     <p-footer>
