--- a/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
+++ b/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div style="margin: 30px;">
+        <div style="margin: 30px;" *ngIf="!editandoUsuario">
             <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                 <label>Senha</label>
             </div>
@@ -48,25 +48,18 @@
             </div>
             <div class="ui-g-12 ui-md-9 ui-fluid">
                 <p-dropdown [options]="perfis" name="perfil" placeholder="Selecione" [(ngModel)]="usuario.perfil" ></p-dropdown>
-                <!-- <p-dropdown id="perfis" name="perfil" [options]="perfis" optionLabel="perfil" class="campo" [(ngModel)]="usuario.perfil">
-                    <ng-template let-perfil pTemplate="item">
-                        <div class="perfil-item">
-                            <div>{{perfil}}</div>
-                        </div>
-                    </ng-template>
-                </p-dropdown> -->
             </div>
-
-            <!-- <div style="margin-top: 20px;">
-                <p-radioButton [inputId]="ativoSelecionado" name="ativoSelecionado" [(ngModel)]="ativoSelecionado" [disabled]="ativoSelecionado === 'Inativo'" [(ngModel)]="usuario.ativo"></p-radioButton>
-                <label style="color: green;">Ativo</label>
-            </div> -->
-
         </div>
-        <div fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
+
+        <div class="ui-g-12 ui-md-9" fxLayout="row" fxLayoutAlign=" none" style="margin-left: 2%;">
             <div fxFlex="10%">
-                <button class="btn-salvar" pButton type="submit" label="Salvar" ></button>
-                <button style="margin-left: 20px;" class="btn-cancelar" routerLink="/usuarios" pButton label="Cancelar"></button>
+                <button class="ui-button-success" pButton type="submit" 
+                    label="Salvar">
+                </button>
+                <button class="ui-button-secondary" 
+                    routerLink="/usuarios" 
+                    pButton label="Cancelar">
+                </button>
             </div>
         </div>
     </form>
