--- a/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
+++ b/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div style="text-align:center">
-        <h1>
+        <h1 style="color: green;">
             {{editandoUsuario ? 'EDITAR ' : 'NOVO'}} USUÁRIO
         </h1>
     </div>
