--- a/desafiourbana-ui - Copia/src/app/tv/tv.component.html
+++ b/desafiourbana-ui - Copia/src/app/tv/tv.component.html
@@ -1,44 +1,52 @@
 <div class="container">
     <div style="text-align:center">
-        <h1>
+        <h1 style="color: green;">
             {{editandoTv ? 'EDITAR ' : 'NOVA'}} TV
         </h1>
     </div>
 
     <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
-        <div style="margin: 30px;">
-            <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
-                <label>Local</label>
-            </div>
-            <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="local" class="campo" [(ngModel)]="tv.local">
-            </div>
-        </div>
 
-        <div style="margin: 30px;">
-            <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
-                <label>Modelo</label>
-            </div>
-            <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="modelo" class="campo" [(ngModel)]="tv.modelo">
-            </div>
-        </div>
+        <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
 
-        <div class="p-formgroup-inline" style="margin: 30px;">
-            <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
-                <label for="perfis">Marca</label>
-            </div>
-            <div class="ui-g-12 ui-md-9 ui-fluid">
-                <p-dropdown [options]="marcas" name="marca" placeholder="Selecione" [(ngModel)]="tv.marca" ></p-dropdown>
+            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+                <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+                    <label>Local</label>
+                </div>
+                <div class="ui-g-12 ui-md-9 ui-fluid">
+                    <input pInputText type="text" name="local" class="campo" [(ngModel)]="tv.local">
+                </div>
             </div>
 
+            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+                <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+                    <label>Modelo</label>
+                </div>
+                <div class="ui-g-12 ui-md-9 ui-fluid">
+                    <input pInputText type="text" name="modelo" class="campo" [(ngModel)]="tv.modelo">
+                </div>
+            </div>
+
+            <div class="p-formgroup-inline" style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+                <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+                    <label for="perfis">Marca</label>
+                </div>
+                <div class="ui-g-12 ui-md-9 ui-fluid">
+                    <p-dropdown [options]="marcas" name="marca" placeholder="Selecione" [(ngModel)]="tv.marca" ></p-dropdown>
+                </div>
+            </div>
+
         </div>
-        <div class="ui-g-12 ui-md-9" fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
-            <div fxFlex="10%">
+
+        <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
+            <div style="display: inline-block; margin-left: 3%;">
                 <button class="ui-button-success" pButton type="submit" label="Salvar" ></button>
-                <button class="ui-button-secondary" style="margin-left: 20px;" routerLink="/tvs" pButton label="Cancelar"></button>
+            </div>
+            <div style="display: inline-block;">
+                <button class="ui-button-secondary" routerLink="/tvs" pButton label="Cancelar"></button>
             </div>
         </div>
+
     </form>
 
 </div>
