--- a/desafiourbana-ui - Copia/src/styles.css
+++ b/desafiourbana-ui - Copia/src/styles.css
@@ -38,3 +38,17 @@ label {
   width: 240px;
   text-align: center;
 }
+
+body .ui-paginator .ui-paginator-pages .ui-paginator-page {
+  padding: 0.5em 0.625em;
+  min-width: 2em;
+  color: white !important;
+  transition: background-color 0.3s;
+  border-radius: 0;
+}
+
+body .ui-state-active, body .ui-state-highlight {
+  background-color:  green !important;
+  color: #ffffff;
+}
+
