--- a/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
@@ -1,19 +1,21 @@
 <div class="container" >
 
     <div style="text-align:center;">
-
         <h1 style="color: green;">
             LISTA DE USUÁRIOS
         </h1>
-        <div style="margin: 2%; float: right; margin-top: 0%;">
-            <button class="btn-salvar" style="background-color: green;" pButton type="button" label="Novo Usuário"  (click)="goToUsuarioNovo()" ></button>
-        </div>
+    </div>
+    <div style="margin: 2%; float: right; margin-top: 0%;">
+        <button class="btn-salvar" class="ui-button-success" pButton type="button" label="Novo Usuário"  (click)="goToUsuarioNovo()" ></button>
     </div>
 
     <div style="margin-top: 5%; margin-bottom: 1%;">
     
         <form #f="ngForm" autocomplete="off" (ngSubmit)="getUsuarios()">
-            <div style="margin: 2%;">
+
+            <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
+
+            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label>Nome</label>
                 </div>
@@ -22,7 +24,7 @@
                 </div>
             </div>
 
-            <div style="margin: 2%;">
+            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label>Matrícula</label>
                 </div>
@@ -31,7 +33,7 @@
                 </div>
             </div>
 
-            <div style="margin: 2%;">
+            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label for="perfis">Perfil</label>
                 </div>
@@ -39,14 +41,14 @@
                     <p-dropdown [options]="perfis" name="perfil" placeholder="Selecione" [(ngModel)]="perfil"></p-dropdown>
                 </div>
             </div>
+            </div>
 
-            <div style="margin-left: 2%; width: 100%; display: inline-block;" >
-
-                <div style="color: green; width: 12%;">
-                    <button style="background-color: green; width: 100%;" pButton type="submit" label="Pesquisar" ></button>
+            <div style="margin-left: 3%; display: inline-block; margin-bottom: 1%;">
+                <div style="display: inline-block;">
+                    <button class="ui-button-success" style="width: 100%;" pButton type="submit" label="Pesquisar" ></button>
                 </div>
-                <div style="float: right; width: 88%; margin-top: -3%;">
-                    <button style="margin-left: 2%;background-color: #b4bbb7;" class="btn-cancelar" pButton label="Limpar" (click)="limpar()" ></button>
+                <div style="display: inline-block;">
+                    <button style="margin-left: 2%;" class="ui-button-secondary" pButton label="Limpar" (click)="limpar()" ></button>
                 </div>      
 
             </div>
@@ -63,8 +65,8 @@
 
         <p-column styleClass="acoes" header="Ações">
           <ng-template let-usuario="rowData" pTemplate="body">
-            <a pButton icon="fa-pencil" label="editar" [routerLink]="['/usuarios', usuario.id]"></a>
-            <button pButton icon="fa-trash" label="excluir" (click)="confirmarExclusao(usuario)"></button>
+            <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/usuarios', usuario.id]"></a>
+            <button pButton icon="fa-trash" class="ui-button-success" label="excluir" (click)="confirmarExclusao(usuario)"></button>
           </ng-template>
         </p-column>
 
