--- a/desafiourbana-ui - Copia/src/app/midia/midia.component.html
+++ b/desafiourbana-ui - Copia/src/app/midia/midia.component.html
@@ -1,12 +1,16 @@
 <div class="container">
     <div style="text-align:center">
-        <h1>
+        <h1 style="color: green;">
             {{editandoMidia ? 'EDITAR ' : 'NOVA'}} MÍDIA
         </h1>
     </div>
 
     <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
-        <div style="margin: 30px;">
+
+        <div style="display: inline-block; margin-left: 0%; 
+            width: 100%;">
+
+        <div style="margin: 2%;">
             <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                 <label>Título</label>
             </div>
@@ -15,7 +19,7 @@
             </div>
         </div>
 
-        <div style="margin: 30px;">
+        <div style="margin: 2%;">
             <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                 <label>Chave</label>
             </div>
@@ -24,46 +28,46 @@
             </div>
         </div>
 
-        <!-- <div fxLayout="row" fxLayoutAlign="none" style="margin: 30px;">
-            <div class="ui-g-4 ui-fluid" style="color: green;">
-                <label for="tiposMidias">Tipo</label>
-            </div>
-            <div class="ui-g-4 ui-fluid">
-                <p-dropdown [options]="tiposMidias" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown>
-            </div>
-            <div class="ui-g-4 ui-fluid" style="color: green;">
-                <label for="disponibilidade">Disponibilidade</label>
-            </div>
-            <div class="ui-g-4 ui-fluid">
-                <p-dropdown [options]="disponibilidade" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>
-            </div>
-        </div> -->
-        <div fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
-            <div fxFlex="10%">
+        <div class="ui-g-12 ui-md-9 ui-fluid" style="margin-left: 2%;">
+
+            <div fxFlex="10%" style="margin-bottom: 2%;">
                 <div style="color: green;">
                     <label for="tiposMidias">Tipo</label>
-                    <!-- <p-dropdown [options]="tiposMidias" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown> -->
-                    <label for="disponibilidade">Disponibilidade</label>
-                    <!-- <p-dropdown [options]="disponibilidade" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>    -->
-                    <label for="disponibilidade">Chaves</label>
                 </div>  
             </div>
-            <div fxFlex="10%">
+
+            <div fxFlex="10%" style="margin-bottom: 2%;">
                 <div style="color: green;">
-                    <!-- <label for="tiposMidias">Tipo</label> -->
-                    <p-dropdown [options]="tiposMidias" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown>
-                    <!-- <label for="disponibilidade">Disponibilidade</label> -->
-                    <p-dropdown [options]="disponibilidade" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>
-                    <!-- <p-multiSelect [options]="chaves" [(ngModel)]="chavesSelecionadas" optionLabel="chave"></p-multiSelect> -->
+                   <p-dropdown [options]="tiposMidias" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown>
                 </div>  
             </div>
+
+            <div fxFlex="10%" style="margin-bottom: 2%;">
+                <div style="color: green;">
+                    <label for="disponibilidade">Disponibilidade</label>
+                </div>  
+            </div>
+            <div fxFlex="10%" style="margin-bottom: 2%;">
+                <div style="color: green;">
+                    <p-dropdown [options]="disponibilidade" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>
+                </div>  
+            </div>
+            <!-- <div fxFlex="10%" style="margin-bottom: 2%;">
+                <div style="color: green;">
+                    <label for="chaves">Chaves</label>
+                </div>  
+            </div>
+            <div style="margin-bottom: 2%;">
+                <div style="color: green;"> -->
+                    <!-- <p-multiSelect [options]="chaves" [(ngModel)]="chavesSelecionadas" optionLabel="chave" [ngModelOptions]="{standalone: true}"></p-multiSelect> -->
+                    <!-- <p-dropdown [options]="chaves" name="chavesMidia" value="l" placeholder="Selecione" [(ngModel)]="midia.chavesSelecionadas" ></p-dropdown>
+                </div>  
+            </div> -->
+            
+
         </div>
 
-        <!-- <div style="margin: 30px;" *ngIf="midia.tipoMidia == 'Imagem'">
-            <p-fileUpload name="myfile[]" url="./upload.php"></p-fileUpload>
-        </div> -->
-
-        <div style="margin: 30px;" *ngIf="midia.tipoMidia == 'Streaming'">
+        <div style="margin:2%;" *ngIf="midia.tipoMidia == 'Streaming'">
             <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                 <label>Link</label>
             </div>
@@ -71,13 +75,23 @@
                 <input pInputText type="text" name="link" class="campo" [(ngModel)]="midia.link">
             </div>
         </div>
-        <div fxLayout="row" fxLayoutAlign=" none" style="margin: 30px;">
-            <div fxFlex="10%">
-                <button class="btn-salvar" pButton type="submit" label="Salvar" ></button>
-                <button style="margin-left: 20px;" class="btn-cancelar" routerLink="/midias" pButton label="Cancelar"></button>
-            </div>
+
+    </div>
+
+        
+  
+
+    <div style="display: inline-block; margin-right: 60%; margin-left: 3%;">
+        <div style="display: inline-block;">
+            <button class="btn-salvar" pButton type="submit" class="ui-button-success" label="Salvar" ></button>
         </div>
-    </form>
+        <div style="display: inline-block;">
+            <button class="ui-button-secondary" routerLink="/midias" pButton label="Cancelar"></button>
+        </div>
+        
+    </div>
+
+</form>
 
 </div>
 
