--- a/desafiourbana-ui - Copia/src/app/menu/menu.component.html
+++ b/desafiourbana-ui - Copia/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
         <img class="logo" src="../../assets/img/logo.png" id="link">   
         <li class="navbar-item" style="margin-top: 15px" routerLinkActive="link-selecionado"><i class="pi pi-align-justify"> Programação do dia</i></li>
         <li class="navbar-item" routerLink="/midias" routerLinkActive="link-selecionado"><i class="pi pi-file"> Mídias</i></li>
-        <li class="navbar-item" routerLinkActive="link-selecionado" routerLinkActive="link-selecionado"><i class="pi pi-youtube"> Programação</i></li>
+        <li class="navbar-item" routerLink="/programacao" routerLinkActive="link-selecionado"><i class="pi pi-youtube"> Programação</i></li>
         <li class="navbar-item" routerLink="/tvs" routerLinkActive="link-selecionado"><i class="pi pi-id-card"> TVs</i></li>
         <li class="navbar-item" routerLink="/usuarios" routerLinkActive="link-selecionado"><i class="pi pi-users"></i> Usuários</li>
         <li class="navbar-item" routerLinkActive="link-selecionado"><i class="pi pi-align-justify"></i> Grades</li>
