--- a/desafiourbana-ui - Copia/src/app/listagem-tv/listagem-tv.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-tv/listagem-tv.component.html
@@ -5,57 +5,55 @@
             LISTA DE TV'S
         </h1>
         <div style="margin: 30px; float: right;">
-            <button pButton type="button" label="Nova TV"  class="ui-button-success" (click)="goToTvNovo()" ></button>
+            <button pButton type="button" label="Nova TV" class="ui-button-success" (click)="goToTvNovo()" ></button>
         </div> 
     </div>
 
     <form #f="ngForm" autocomplete="off" (ngSubmit)="getTvs()">
-        <div style="margin: 2%;">
-            <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
-                <label>Local</label>
+
+        <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
+
+            <div style="margin: 2%;">
+                <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+                    <label>Local</label>
+                </div>
+                <div class="ui-g-12 ui-md-9 ui-fluid">
+                    <input pInputText type="text" name="local" class="campo" [(ngModel)]="local">
+                </div>
+            </div> 
+
+        </div>                   
+    
+        <div style="margin-left: 3%; display: inline-block; margin-bottom: 1%; ">
+        
+            <div style="display: inline-block;">
+                <button pButton type="submit" label="Pesquisar" class="ui-button-success"></button>
             </div>
-            <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="local" class="campo" [(ngModel)]="local">
+            <div style="display: inline-block;">
+                <button type="button" class="ui-button-secondary" pButton label="Limpar" (click)="limpar()" ></button>
             </div>
-        </div>            
-               
+        </div>           
+            
     </form>
     
-</div>
-
-<div>
-
-    <div style="margin-left: 2%; display: inline-block; margin-bottom: 1%; ">
-
-        <div style="display: inline-block;">
-            <button pButton type="submit" label="Pesquisar" class="ui-button-success"></button>
-        </div>
-        <div style="display: inline-block;">
-            <button type="button" class="ui-button-secondary" pButton label="Limpar" (click)="limpar()" ></button>
-        </div>
-    </div>
-
-    <div style="display: inline-block;">
-
-        <p-dataTable [value]="tvs" [paginator]="true" [rows]="3" [responsive]="true"
+    <p-dataTable [value]="tvs" [paginator]="true" [rows]="3" [responsive]="true"
         emptyMessage="Nenhuma TV encontrada" #tabela>
-        
+            
             <p-column field="local" header="Local"></p-column>
             <p-column field="chave" header="Chave"></p-column>
             <p-column field="disponibilidade" header="Disponibilidade"></p-column>
             <p-column field="modelo" header="Modelo"></p-column>
             <p-column field="marca" header="Marca"></p-column>
             <p-column field="online" header="Online"></p-column>
-        
+            
             <p-column styleClass="acoes" header="Ações">
-            <ng-template let-tv="rowData" pTemplate="body">
-                <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/tvs', tv.id]"></a>
-                <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button>
-            </ng-template>
-        </p-column>
-        
-        </p-dataTable>
-    </div>
+                <ng-template let-tv="rowData" pTemplate="body">
+                    <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/tvs', tv.id]"></a>
+                    <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button>
+                </ng-template>
+            </p-column>
+            
+    </p-dataTable>
 
-</div>
+</div>   
 
