--- a/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
@@ -1,21 +1,19 @@
-<div class="container" >
+<div class="container" style="width: 100%;">
 
     <div style="text-align:center;">
         <h1 style="color: green;">
             LISTA DE USUÁRIOS
         </h1>
+        <div style="margin: 30px; float: right; margin-top: 0%;">
+            <button class="btn-salvar" class="ui-button-success" pButton type="button" label="Novo Usuário" (click)="goToUsuarioNovo()" ></button>
+        </div>
     </div>
-    <div style="margin: 2%; float: right; margin-top: 0%;">
-        <button class="btn-salvar" class="ui-button-success" pButton type="button" label="Novo Usuário"  (click)="goToUsuarioNovo()" ></button>
-    </div>
-
-    <div style="margin-top: 5%; margin-bottom: 1%;">
     
-        <form #f="ngForm" autocomplete="off" (ngSubmit)="getUsuarios()">
+    <form #f="ngForm" autocomplete="off" (ngSubmit)="getUsuarios()">
 
-            <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
+        <div style="margin-left: 0%; display: inline-block; margin-bottom: 1%; width: 100%; ">
 
-            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+            <div style="margin: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label>Nome</label>
                 </div>
@@ -24,7 +22,7 @@
                 </div>
             </div>
 
-            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+            <div style="margin: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label>Matrícula</label>
                 </div>
@@ -33,7 +31,7 @@
                 </div>
             </div>
 
-            <div style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+            <div style="margin: 2%;">
                 <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
                     <label for="perfis">Perfil</label>
                 </div>
@@ -41,21 +39,21 @@
                     <p-dropdown [options]="perfis" name="perfil" placeholder="Selecione" [(ngModel)]="perfil"></p-dropdown>
                 </div>
             </div>
+
+        </div>
+            
+        <div style="margin-left: 3%; display: inline-block; margin-bottom: 1%; ">
+            
+            <div style="display: inline-block;">
+                <button class="ui-button-success" pButton type="submit" label="Pesquisar" ></button>
             </div>
+            <div style="display: inline-block;">
+                <button style="margin-left: 2%;" class="ui-button-secondary" pButton label="Limpar" (click)="limpar()" ></button>
+            </div>  
+        </div>            
 
-            <div style="margin-left: 3%; display: inline-block; margin-bottom: 1%;">
-                <div style="display: inline-block;">
-                    <button class="ui-button-success" style="width: 100%;" pButton type="submit" label="Pesquisar" ></button>
-                </div>
-                <div style="display: inline-block;">
-                    <button style="margin-left: 2%;" class="ui-button-secondary" pButton label="Limpar" (click)="limpar()" ></button>
-                </div>      
-
-            </div>
-
-        </form>
-    </div>
-
+    </form>
+   
     <p-dataTable [value]="usuarios" [paginator]="true" [rows]="3" [responsive]="true"
       emptyMessage="Nenhum usuário encontrado" #tabela>
         <p-column field="nome" header="Nome"></p-column>
@@ -73,5 +71,4 @@
     </p-dataTable>
 
 </div>
-
       
